--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>За плечами два высших образования, опыт работы химиком на заводе производства соков, главным бухгалтером на автосервисном предприятиии, а еще курсы "Front-end разработка" при Одеском Политехе, которые, кстати, и перевернули мой проффесиональный мир.</p>
         <p>Сегодня я - стажер в IT-компании "Zazmic"!</p>
         <p>Я знаю, что будет сложно и интересно. Я готова учиться, трудиться и вливаться.</p>
-        <p>И я верю, что по окончанию стажировки менторы будут смотреть с гордостью на взрощенного ими веб-разработчика!</p>
+        <p>И я верю, что по окончанию стажировки менторы будут смотреть с гордостью на взрощенных ими веб-разработчиков!</p>
         <a id="skills"></a>
     </section>
     
